
20120914-1333:
	DIOValue fixed to always return 1 or 0. Formerly it did not if an invalid state was encountered.
        implemented new GetAll function for DIO

20120917: (unreleased)
	fixed http.c to end connection to be a bit more lenient about CR/LF formatting after "end" command
	removed millisecond delays in ts8820ADCAIO as according to the author of the FPGA code they are unnecessary
	
20120919-1625:
	Now turning on the 12.5Mhz clock for base boards in the TS-4700 initialization code, to prevent chicken-egg problems in detecting some base boards

20120920-1002:
	fixed regression added in 20120815 version, when we "fixed" locking to add R/W locks; we accidentally removed SBus locking with that change.

20120920-1411:
	fixes to WBSPI to accomodate downgrade to 8-bit interface

20120924-1500:
	fixed mis-detection of TS-7558 so that CAN will work

20120925-1500:
	added CAN detection routine to SJA1000CAN.c; CAN will no longer initialize if bitstream support is not present
	modified canctl.c to correctly detect CAN and abort if CAN is not present
	disabled muxbus instantiation on 7xxx boards, as this can cause problems on some of these boards such as the TS-7558

20120926-1115:
	modified SJA1000CANRx to set the length of the receive CAN buffer to zero on abort
	modified tsct to trap the interrupt signal and abort any CAN commands in progress to avoid possible hang on some platforms

20120926-1658:
	modified Makefile to be more flexible, and remove make-all as it was an internal tool no longer necessary anyway
	modified ts4500.c to reject bitstreams less than revision 6, as we can't tell if they will hang on board detection or not
	added support for TS-4710 and TS-4712

20120928:
	fixed CompareNVPP2 and CompareNVPP3 which were doing each other's jobs and returning the ArrayLength of a non-array instead of the stems passed

20121002:
	modified FPGA.c to use Array, thus retiring obselete array.h and array.hh
	removed obsolete file arch2.h from project